# fvq

./: Cargo.toml  README.md  bcc-stats.txt  glue.md
src/: lib.rs  quad.rs  tile.rs
src/encode/: arithmetic.rs  bits.rs  mod.rs
src/io/: cli.rs  mod.rs  pixels.rs
src/quantize/: bcc.rs  lattice.rs  mod.rs
src/transform/: chunks.rs  haar.rs  mod.rs  twiddle.rs  vhc.rs
